# F1-Race-Intelligence-Agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/agent/: __init__.py  graph.py  llm.py  nodes.py  state.py  validation.py
backend/agent/nodes/: __init__.py  enrich.py  evaluate.py  execute.py  generate.py  plan.py  process.py  understand.py  validate.py
backend/agent/processors/: __init__.py  comparison.py  formatters.py  lap_analysis.py  strategy.py  visualization.py
backend/agent/prompts/: __init__.py  generate.py  plan.py  understand.py
backend/agent/rag/: __init__.py  embeddings.py  service.py
backend/agent/schemas/: __init__.py  analysis.py  query.py
backend/agent/tools/: __init__.py  neo4j_tools.py  timescale_tools.py  vector_tools.py
backend/api/: main.py  streaming.py
backend/api/routers/: chat.py  data.py  sessions.py
backend/db/: __init__.py  cache.py
backend/docs/plans/: 2025-12-16-ux-enhancements-design.md
backend/ingestion/: __init__.py  orchestrator.py
backend/ingestion/content/: __init__.py  ergast.py  reddit.py  regulations.py
backend/ingestion/extractors/: __init__.py  fastf1_extractor.py
backend/ingestion/loaders/: __init__.py  neo4j_loader.py  qdrant_loader.py  timescale_loader.py
backend/memory/: __init__.py  session_state.py  tools.py  user_memory.py
backend/observability/: __init__.py  langfuse_tracer.py  sentry_integration.py
backend/preprocessing/: __init__.py  fuzzy_matcher.py  intent_classifier.py  query_expander.py  query_history.py  query_preprocessor.py
backend/scripts/: create_materialized_views.sql  load_data.py  reload_missing_races.py  test_memory.py  test_observability.py
backend/tests/: conftest.py
backend/tests/test_api/: test_health.py
backend/tests/test_tools/: test_cache.py  test_sql_validation.py  test_strategy_simulator.py
docs/plans/: 2025-12-14-f1-race-intelligence-agent-design.md  2025-12-15-enhanced-agent-architecture-design.md  2025-12-15-phase4-frontend-ui-design.md  (+1 more)
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
(+29 files in other folders)
